# govlink

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml  testing-guide.md
.claude/: settings.json
.claude/agents/: backend-reviewer.md
.claude/skills/add-dataset/: SKILL.md
.claude/skills/ship-page/: SKILL.md
.github/workflows/: gitleaks.yml
alembic/: env.py
backend/: .dockerignore  .env.docker  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  ruff.toml
backend/docs/: README.md  api-reference.md
backend/govlink/: db.py  logging.py
backend/govlink/api/: deps.py
backend/tests/: test_docker.py
docs/: README.md  adding-a-dataset.md  api-reference.md  deployment.md
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/docs/: build-plan.md  deploy-vercel.md  pages-tracker.md
frontend/src/: App.jsx  App.tsx  index.css  main.tsx
govlink/: __init__.py  cli.py  config.py  db.py  logging.py  main.py
govlink/api/: __init__.py  deps.py
govlink/core/: base_parser.py  base_source.py  definition.py  models.py  registry.py  schemas.py
govlink/ingestion/: __init__.py  orchestrator.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  conftest.py  test_admin.py  test_meta.py
tests/integration/: test_ingestion_e2e.py
tests/unit/: test_alembic.py  test_csv_exporter.py  test_currency_codes.py  test_definition.py  test_logging.py  test_orchestrator.py  test_registry.py
(+106 files in other folders)
